kubernetes/monitoring/12-deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:9.5.6   
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: grafana-http
          volumeMounts:
            # 1) Persist dashboards/plugins/etc.
            - name: grafana-storage
              mountPath: /var/lib/grafana
            # 2) Provision the Prometheus datasource
            - name: grafana-datasource-cm
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: pvc-grafana-data
        - name: grafana-datasource-cm
          configMap:
            name: grafana-datasource
      # serviceAccountName: prometheus
