kubernetes/monitoring/13-service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      nodePort: 32000   
      name: http
